# automl-stat-mcp

./: .editorconfig  .env.example  .gitignore  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  CONSTITUTION.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  docker-compose.gpu.yml  docker-compose.https.yml  docker-compose.minio.yml  docker-compose.scale.yml  docker-compose.test.yml  docker-compose.yml  mypy.ini  pyproject.toml  pytest.ini  quick-install.sh  run_tests.sh  start.sh  stop.sh
.claude/skills/changelog-updater/: SKILL.md
.claude/skills/code-refactor/: SKILL.md
.claude/skills/code-reviewer/: SKILL.md
.claude/skills/data-analysis-workflow/: SKILL.md
.github/agents/: architect.agent.md  ask.agent.md  code.agent.md  debug.agent.md
.github/bylaws/: docker-operations.md  file-paths.md  python-environment.md
.github/workflows/: test.yml
automl-mcp-server/: Dockerfile  README.md  docker-compose.yml  pyproject.toml  pytest.ini  requirements-test.txt  requirements.txt  run_tests.sh
automl-mcp-server/src/: __init__.py  main.py
automl-mcp-server/src/infrastructure/mcp/: __init__.py  client.py  config.py  server.py
automl-mcp-server/src/infrastructure/mcp/handlers/: __init__.py  automl_handler.py  base.py  cleaning_tools.py  data_cleaner.py  data_validator.py  dataset_tools.py  direct_tools.py  info_tools.py  integrated_tools.py  job_tools.py  model_tools.py  orchestration_tools.py  power_tools.py  resources.py  result_storage.py  smart_tools.py  statistics_tools.py  statistics_tools_new.py  stats_client.py  stats_worker_tasks.py  training_tools.py  upload_tools.py
automl-mcp-server/src/infrastructure/mcp/handlers/statistics/: REFACTORING_SUMMARY.md  __init__.py  base.py  eda_tools.py  jobs_tools.py  propensity_tools.py  roc_tools.py  stats_client.py  survival_tools.py  tableone_tools.py
automl-mcp-server/src/infrastructure/mcp/handlers/statistics/power/: __init__.py  anova.py  survival.py  ttest.py
automl-mcp-server/tests/: conftest.py
automl-mcp-server/tests/unit/: test_automl_workflow_isolated.py  test_cleaning_isolated.py  test_data_validator_isolated.py  test_dataset_isolated.py  test_error_scenarios_isolated.py  test_model_isolated.py  test_orchestration_isolated.py  test_power_isolated.py  test_propensity_isolated.py  test_result_storage.py  test_result_storage_isolated.py  test_result_storage_standalone.py  test_roc_isolated.py  test_service_mock_isolated.py  test_smart_tools_isolated.py  test_statistics_isolated.py  test_survival_isolated.py  test_tableone_isolated.py  test_upload_isolated.py
automl-service/: Dockerfile  README.md  docker-compose.yml  requirements-dev.txt  requirements.txt
automl-service/src/: __init__.py  config.py  main.py
automl-service/tests/: test_local.py
automl-worker/: Dockerfile  Dockerfile.gpu  README.md  requirements.txt
automl-worker/src/: __init__.py  worker.py
docs/: AGENT_WORKFLOW.md  ARCHITECTURE.md  ARCHITECTURE_AUDIT.md  LIGHTWEIGHT_SETUP.md  MCP_TOOLS_INVENTORY.md  QUICK_START_GUIDE.md  REDIS_AUDIT_REPORT.md  REDIS_PRIORITY2_PLAN.md  ROADMAP.md  ROC_AUC_Interactive_Features_Plan.md  TESTING_ENHANCEMENT_PLAN.md  TESTING_NEXT_STEPS.md  TESTING_STRATEGY.md  TEST_SUITE_SUMMARY.md  automl_mcp_spec_for_claude.md  deployment-guide.md
docs/archive/: ARCHITECTURE_AUDIT.md  DDD_Refactoring_Plan.md  Phase6_Power_Analysis_Plan.md  ROC_AUC_Interactive_Features_Plan.md
docs/design-issues/: 001-data-cleaning-workflow.md  002-csv-path-refactoring.md  002-data-cleaning-service.md  003-result-persistence.md  003-visualization-service.md  003-workflow-improvement-plan.md  004-tool-consolidation-plan.md  006-data-quality-architecture.md
docs/plans/: DDD_Refactoring_Plan.md  Tool_Architecture_Audit.md
memory-bank/: activeContext.md  architect.md  decisionLog.md  productContext.md  progress.md  projectBrief.md  systemPatterns.md
nginx/: nginx.conf
sample_data/: adult_income.csv  adult_income_README.txt  breast_cancer.csv  breast_cancer_README.txt  california_housing.csv  california_housing_README.txt  diabetes_README.txt  download_datasets.py  generate_medical_data.py  heart_disease_README.txt  iris.csv  iris_README.txt  lung_cancer_README.txt  rossi_recidivism_README.txt  stanford_heart.csv  stanford_heart_README.txt  titanic.csv  titanic_README.txt  wine_quality_README.txt
sample_results/: README.md
sample_results/iris/: upload_dataset.json
sample_results/rossi_recidivism/: _meta.json
scripts/: docker-start.sh  run_mypy_checks.sh  run_tests.sh  setup-vscode-mcp.sh
shared/: __init__.py
shared/infrastructure/: __init__.py  path_safety.py  redis_manager.py
stats-service/: Dockerfile  requirements.txt
stats-service/src/: __init__.py  config.py  main.py
stats-service/tests/: test_storage_factory.py
stats-worker/: .coveragerc  Dockerfile  pytest.ini  requirements-dev.txt  requirements.txt
stats-worker/src/: __init__.py  config.py  worker.py
stats-worker/tests/: test_advanced_analysis.py  test_automl_visualization.py  test_group_comparison_visualization.py  test_power_analysis.py  test_power_analysis_phase62.py  test_power_analysis_phase63.py  test_propensity_score.py  test_public_datasets.py  test_results_manager.py  test_roc_analysis.py  test_roc_visualization.py  test_survival_analysis.py  test_survival_visualization.py  test_tableone_generator.py  test_visualization.py
tests/: E2E_TEST_PLAN.md  TEST_COVERAGE_PLAN.md  conftest.py  pytest.ini  requirements.txt  test_benchmark.py  test_data_quality.py  test_dataflow_integrity.py  test_datasets_e2e.py  test_e2e.py  test_e2e_automl.py  test_e2e_data.py  test_e2e_full.py  test_e2e_stats.py  test_e2e_visualization.py  test_eda_edge_cases.py  test_security_validation.py  test_service_communication.py  test_tool_logic.py
tests/e2e/: test_complete_workflows.py
tests/edge_cases/: test_data_boundaries.py  test_input_validation.py
tests/performance/: test_load_stress.py
tests/security/: test_injection_defense.py
tests/shared/: __init__.py  logging.py
tests/unit/: test_path_safety.py  test_redis_manager.py
(+161 files in other folders)
