[project]
name = "automl-stat-mcp"
version = "0.1.0"
description = "AutoML and Statistical Analysis Platform with Model Context Protocol (MCP) Integration"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "Apache-2.0"}
authors = [
    {name = "Eric Wang", email = "eric@example.com"}
]

# =============================================================================
# Core Dependencies (for local development)
# =============================================================================
dependencies = [
    # Web Framework
    "fastapi>=0.104.0",
    "uvicorn[standard]>=0.24.0",
    "pydantic>=2.0.0",
    "python-multipart>=0.0.6",

    # HTTP Client
    "httpx>=0.25.0",

    # Data Processing
    "pandas>=2.0.0",
    "numpy>=1.24.0",
    "scipy>=1.11.0",

    # Storage & Queue
    "redis>=5.0.0",
    "minio>=7.2.0",

    # MCP SDK
    "mcp>=1.0.0",

    # Utilities
    "python-dotenv>=1.0.0",
    "websockets>=12.0",
    "python-dateutil>=2.8.0",
]

# =============================================================================
# Optional Dependencies
# =============================================================================
[project.optional-dependencies]
# Statistical analysis (stats-service, stats-worker)
stats = [
    "ydata-profiling>=4.6.0",
    "tableone>=0.9.0",
    "statsmodels>=0.14.0",
    "lifelines>=0.27.0",
    "matplotlib>=3.7.0",
    "seaborn>=0.12.0",
    "statannotations>=0.6.0",
]

# Development & Testing
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.1.0",
    "pytest-benchmark>=4.0.0",
    "structlog>=24.1.0",
    "ruff>=0.1.0",
    "mypy>=1.5.0",
    "pre-commit>=4.2.0",
    "pip-audit>=2.9.0",
    "scikit-learn>=1.3.0",  # for test datasets
]

# All dependencies (for full local development)
all = [
    "ydata-profiling>=4.6.0",
    "tableone>=0.9.0",
    "statsmodels>=0.14.0",
    "lifelines>=0.27.0",
    "matplotlib>=3.7.0",
    "seaborn>=0.12.0",
    "statannotations>=0.6.0",
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "pytest-benchmark>=4.0.0",
    "pytest-cov>=4.1.0",
    "structlog>=24.1.0",
    "ruff>=0.1.0",
    "mypy>=1.5.0",
    "pre-commit>=4.2.0",
    "pip-audit>=2.9.0",
    "scikit-learn>=1.3.0",
]

# =============================================================================
# Build System
# =============================================================================
[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = [
    "automl-mcp-server/src",
    "automl-service/src",
    "automl-worker/src",
    "stats-service/src",
    "stats-worker/src",
]

# =============================================================================
# Tool Configurations
# =============================================================================
[tool.ruff]
line-length = 120
target-version = "py310"
extend-exclude = ["htmlcov", "memory-bank", "projects"]

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
]
ignore = [
    "E501",  # line too long (handled by formatter)
]

[tool.ruff.lint.isort]
known-first-party = ["shared"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

# =============================================================================
# UV Configuration
# =============================================================================
[dependency-groups]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "pytest-benchmark>=4.0.0",
    "pytest-cov>=4.1.0",
    "structlog>=24.1.0",
    "ruff>=0.1.0",
    "mypy>=1.5.0",
    "pre-commit>=4.2.0",
    "pip-audit>=2.9.0",
]

[tool.uv]
default-groups = ["dev"]
